[gd_scene format=3 uid="uid://crmw3d237gpnm"]

[ext_resource type="Script" uid="uid://bdkywufv25hjs" path="res://Scripts/Menus/pause_menu.gd" id="1_u7qui"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_u7qui")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dim" type="ColorRect" parent="Control"]
layout_mode = 0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.55)

[node name="Center" type="CenterContainer" parent="Control"]
layout_mode = 0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="Control/Center"]
layout_mode = 2
custom_minimum_size = Vector2(420, 0)

[node name="Margin" type="MarginContainer" parent="Control/Center/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="Control/Center/Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Control/Center/Panel/Margin/VBox"]
layout_mode = 2
text = "PAUSA"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Control/Center/Panel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ResumeButton" type="Button" parent="Control/Center/Panel/Margin/VBox/Buttons"]
layout_mode = 2
text = "Continuar"

[node name="MainMenuButton" type="Button" parent="Control/Center/Panel/Margin/VBox/Buttons"]
layout_mode = 2
text = "Men√∫ principal"

[node name="OptionsBox" type="VBoxContainer" parent="Control/Center/Panel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="VolumeRow" type="HBoxContainer" parent="Control/Center/Panel/Margin/VBox/OptionsBox"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="Control/Center/Panel/Margin/VBox/OptionsBox/VolumeRow"]
layout_mode = 2
text = "Volumen"

[node name="VolumeSlider" type="HSlider" parent="Control/Center/Panel/Margin/VBox/OptionsBox/VolumeRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="FullscreenRow" type="HBoxContainer" parent="Control/Center/Panel/Margin/VBox/OptionsBox"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="Control/Center/Panel/Margin/VBox/OptionsBox/FullscreenRow"]
layout_mode = 2
text = "Pantalla completa"

[node name="FullscreenCheck" type="CheckBox" parent="Control/Center/Panel/Margin/VBox/OptionsBox/FullscreenRow"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="Control/Center/Panel/Margin/VBox"]
layout_mode = 2
text = "Salir del juego"

[connection signal="pressed" from="Control/Center/Panel/Margin/VBox/Buttons/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/Center/Panel/Margin/VBox/Buttons/MainMenuButton" to="." method="_on_main_menu_pressed"]
[connection signal="value_changed" from="Control/Center/Panel/Margin/VBox/OptionsBox/VolumeRow/VolumeSlider" to="." method="_on_volume_changed"]
[connection signal="toggled" from="Control/Center/Panel/Margin/VBox/OptionsBox/FullscreenRow/FullscreenCheck" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="Control/Center/Panel/Margin/VBox/QuitButton" to="." method="_on_quit_pressed"]
